<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remote Controller</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_launch">Launcher</string>
    <string name="title_activity_launch">Launch programs</string>
    <string name="btn_back">back</string>
    <string name="btn_tab">tab</string>
    <string name="btn_up">\u2191</string>
    <string name="btn_down">\u2193</string>
    <string name="btn_left">\u2190</string>
    <string name="btn_right">\u2192</string>
    <string name="btn_enter">enter</string>
    <string name="btn_space">space</string>
    <string name="btn_esc">esc</string>
    <string name="btn_ctrl_f">ctrl-f</string>
    <string name="btn_vol_down">vol -</string>
    <string name="btn_vol_up">vol +</string>

</resources>